<resources>
    <string name="app_name">Mayai</string>
    <string name="title_mayai">Mayai</string>
    <string name="title_home">New</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_params">Settings: %s</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_alarms_param">Alarms: %d</string>
    <string name="title_egg">EGG</string>
    <string name="title_champagne">CHAMPAGNE</string>
    <string name="title_bread">BREAD</string>
    <string name="title_potatoes">POTATOES</string>
    <string name="title_cake">CAKE</string>
    <string name="title_clock">CLOCK</string>
    <string name="title_debug">Trouble Shooting</string>
    <string name="title_log">Activity Log</string>
    <string name="label_stop_alarm">Stop alarm</string>
    <string name="label_start_alarm">Start alarm</string>
    <string name="label_headline_home">Tap short to start a new alarm,\n tap long to see all alarms</string>
    <string name="label_headline_countdown">Tap the image to modify the alarm,\n rotate the scale to set the time,\n tap the bell to cancel it</string>
    <string name="label_headline_settings">Tap the pencil to change the default alarm duration,\n tap the reset icon to revert changes,\n tap the bug for trouble shooting</string>
    <string name="label_headline_settings_details">Rotate the scale\n to change the default alarm duration,\n tap the reset icon to revert changes</string>
    <string name="label_headline_debug">Open system notification settings,\n open next scheduled alarm,\n tap the bell to cancel it,\n display the log</string>
    <string name="label_headline_alarms">Swipe to delete the alarm,\n tap long or double tap to edit it</string>
    <string name="label_image">image</string>
    <string name="label_channel_settings">Open Channel Settings</string>
    <string name="label_open_alarm">Open Alarm</string>
    <string name="label_default_time">17:03</string>
    <string name="label_show_log">Open Log</string>
    <string name="label_delete">delete</string>
    <string name="label_empty" />
    <string name="label_default_count">2</string>
    <string name="label_show_hint">Show Hint</string>
    <string name="label_swipe_and_rotate_the_scale">Swipe and rotate the scale to change the alarm time</string>
    <string name="label_set_alarm_for_champagne">Set alarm for champagne</string>
    <string name="label_set_alarm_for_eggs">Set alarm for eggs</string>
    <string name="label_set_alarm_for_potatoes">Set alarm for potatoes</string>
    <string name="label_set_alarm_for_bread">Set alarm for bread</string>
    <string name="label_set_alarm">Set alarm</string>
    <string name="label_modify_default_alarm_time">Modify default alarm time</string>
    <string name="label_reset_default_settings">Reset default durations</string>
    <string name="label_repeat_countdown_with_last_duration">Repeat countdown with last duration</string>
    <string name="label_undo">Undo</string>
    <string name="label_version_params">Version: %s</string>
    <string name="text_alarm_canceled">Alarm was canceled.</string>
    <string name="text_alarm_scheduled">Alarm scheduled.</string>
    <string name="text_alarm_deleted">Alarm was deleted</string>
    <string name="default_next_alarm"><![CDATA[<NEXT ALARM>]]></string>
    <string name="default_log_entry">log entry test sample</string>
    <string name="default_status">Pending…</string>
    <string name="default_time">06:14</string>
    <string name="default_version">1.2.3</string>
</resources>
