<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

         <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <TextView
            android:id="@+id/next_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/default_next_alarm" />

        <ImageView
            android:id="@+id/buttonShowLog"
            android:layout_width="0dp"
            android:layout_height="80sp"
            app:layout_constraintBottom_toTopOf="@id/buttonOpenChannelSettings"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
            android:contentDescription="@string/label_show_log"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/log_pressable" />

        <ImageView
            android:id="@+id/buttonStopPlaying"
            android:layout_width="0dp"
            android:layout_height="80sp"
            app:layout_constraintBottom_toTopOf="@id/buttonOpenChannelSettings"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline3"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline4"
            android:contentDescription="@string/label_start_alarm"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/alarm_pressable" />

        <Button
            android:id="@+id/buttonOpenAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/primaryTextColor"
            android:text="@string/label_open_alarm"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/buttonOpenChannelSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/buttonOpenAlarm"
            android:textColor="@color/primaryTextColor"
            android:text="@string/label_channel_settings"
            android:layout_margin="5dp" />

        <FrameLayout
            android:id="@+id/headlineFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.5"
            android:background="@color/hintBackgroundColor">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:textColor="@color/hintTextColor"
                android:text="@string/label_headline_debug" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

