<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="7sp"
            android:scaleType="fitEnd"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/label_delete"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="7sp"
            android:scaleType="fitEnd"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/label_delete"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_selector">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="64sp"
            android:layout_height="64sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="15sp"
            android:layout_marginHorizontal="25sp"
            android:src="@drawable/champagne"
            android:contentDescription="@string/label_image"
            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorAccent"
            android:text="@string/label_default_time"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/time"
            app:layout_constraintStart_toEndOf="@id/time"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:text="@string/default_status"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
            app:layout_constraintTop_toBottomOf="@id/time"
            android:text="@string/default_log_entry"
            android:textColor="@color/colorGoldenText"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/textViewRemainingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time"
            android:layout_marginHorizontal="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/default_time"
            android:textAppearance="?attr/textAppearanceListItem" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
