<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.alarm.AlarmCountdownFragment"
        android:keepScreenOn="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <com.stho.mayai.MayaiImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline2"
            android:contentDescription="@string/label_empty"
            android:background="@drawable/background_selector"
            android:src="@drawable/clock"
            android:alpha="0.3" />

        <FrameLayout
            android:id="@+id/rotaryFrame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:alpha="0.5">

            <ImageView
                android:id="@+id/rotaryBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/plate_bright"
                android:contentDescription="@string/label_swipe_and_rotate_the_scale"
                android:alpha="0.7" />

            <com.stho.mayai.RotaryView
                android:id="@+id/rotary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/plate_pointer"
                android:rotation="60" />

        </FrameLayout>

        <TextView
            android:id="@+id/textViewDefaultTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="30sp"
            android:textColor="@color/primaryTextColor"
            android:textAlignment="center"
            android:text="@string/default_time"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless" />

        <ImageView
            android:id="@+id/buttonReset"
            android:layout_width="0dp"
            android:layout_height="80sp"
            android:src="@drawable/reset_pressable"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline3"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline4"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/label_undo"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless" />

        <FrameLayout
            android:id="@+id/headlineFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.5"
            android:background="@color/hintBackgroundColor">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:textColor="@color/hintTextColor"
                android:text="@string/label_headline_settings_details" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
