<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.333" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.666" />

        <com.stho.mayai.MayaiImageView
            android:id="@+id/imageViewClock"
            android:layout_width="0dp"
            android:layout_height="140sp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/label_set_alarm"
            android:background="@drawable/background_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/clock"/>

        <com.stho.mayai.MayaiImageView
            android:id="@+id/imageViewChampagne"
            android:layout_width="0dp"
            android:layout_height="300sp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/label_set_alarm_for_champagne"
            android:background="@drawable/background_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline2"
            android:src="@drawable/champagne" />

        <com.stho.mayai.MayaiImageView
            android:id="@+id/imageViewEgg"
            android:layout_width="0dp"
            android:layout_height="130sp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/label_set_alarm_for_eggs"
            android:background="@drawable/background_selector"
            app:layout_constraintBottom_toTopOf="@id/imageViewCake"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/egg" />

        <com.stho.mayai.MayaiImageView
            android:id="@+id/imageViewCake"
            android:layout_width="0dp"
            android:layout_height="130sp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/label_set_alarm_for_potatoes"
            android:background="@drawable/background_selector"
            app:layout_constraintBottom_toTopOf="@id/imageViewClock"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/cake" />

        <com.stho.mayai.MayaiImageView
            android:id="@+id/imageViewBread"
            android:layout_width="0dp"
            android:layout_height="130sp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/label_set_alarm_for_bread"
            android:background="@drawable/background_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline1"
            android:src="@drawable/bread" />

        <com.stho.mayai.MayaiImageView
            android:id="@+id/imageViewPotatoes"
            android:layout_width="0dp"
            android:layout_height="120sp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/label_set_alarm_for_eggs"
            android:background="@drawable/background_selector"
            app:layout_constraintBottom_toTopOf="@id/imageViewBread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline1"
            android:src="@drawable/potatoes" />

        <ImageView
            android:id="@+id/infoCircleEgg"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewEgg"
            app:layout_constraintEnd_toEndOf="@id/imageViewEgg"
            android:src="@drawable/circle_green"
            android:contentDescription="@string/label_empty" />

        <ImageView
            android:id="@+id/infoCircleChampagne"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewChampagne"
            app:layout_constraintEnd_toEndOf="@id/imageViewChampagne"
            android:src="@drawable/circle_green"
            android:contentDescription="@string/label_empty" />

        <ImageView
            android:id="@+id/infoCircleBread"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewBread"
            app:layout_constraintEnd_toEndOf="@id/imageViewBread"
            android:src="@drawable/circle_green"
            android:contentDescription="@string/label_empty" />

        <ImageView
            android:id="@+id/infoCirclePotatoes"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewPotatoes"
            app:layout_constraintEnd_toEndOf="@id/imageViewPotatoes"
            android:src="@drawable/circle_green"
            android:contentDescription="@string/label_empty" />

        <ImageView
            android:id="@+id/infoCircleClock"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewClock"
            app:layout_constraintEnd_toEndOf="@id/imageViewClock"
            android:src="@drawable/circle_green"
            android:contentDescription="@string/label_empty" />

        <ImageView
            android:id="@+id/infoCircleCake"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewCake"
            app:layout_constraintEnd_toEndOf="@id/imageViewCake"
            android:src="@drawable/circle_green"
            android:contentDescription="@string/label_empty" />

        <TextView
            android:id="@+id/infoCounterEgg"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewEgg"
            app:layout_constraintEnd_toEndOf="@id/imageViewEgg"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:gravity="center"
            android:textSize="@dimen/counter_text_size"
            android:text="@string/label_default_count" />

        <TextView
            android:id="@+id/infoCounterChampagne"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewChampagne"
            app:layout_constraintEnd_toEndOf="@id/imageViewChampagne"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:gravity="center"
            android:textSize="@dimen/counter_text_size"
            android:text="@string/label_default_count" />

        <TextView
            android:id="@+id/infoCounterBread"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewBread"
            app:layout_constraintEnd_toEndOf="@id/imageViewBread"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:gravity="center"
            android:textSize="@dimen/counter_text_size"
            android:text="@string/label_default_count" />

        <TextView
            android:id="@+id/infoCounterPotatoes"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewPotatoes"
            app:layout_constraintEnd_toEndOf="@id/imageViewPotatoes"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:gravity="center"
            android:textSize="@dimen/counter_text_size"
            android:text="@string/label_default_count" />

        <TextView
            android:id="@+id/infoCounterClock"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewClock"
            app:layout_constraintEnd_toEndOf="@id/imageViewClock"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:gravity="center"
            android:textSize="@dimen/counter_text_size"
            android:text="@string/label_default_count" />

        <TextView
            android:id="@+id/infoCounterCake"
            android:layout_width="@dimen/counter_image_size"
            android:layout_height="@dimen/counter_image_size"
            app:layout_constraintTop_toTopOf="@id/imageViewCake"
            app:layout_constraintEnd_toEndOf="@id/imageViewCake"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:gravity="center"
            android:textSize="@dimen/counter_text_size"
            android:text="@string/label_default_count" />

        <FrameLayout
            android:id="@+id/headlineFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.5"
            android:background="@color/hintBackgroundColor">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:textColor="@color/hintTextColor"
                android:text="@string/label_headline_home" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
